--- a/_includes/themes/bootstrap-3/post.html
+++ b/_includes/themes/bootstrap-3/post.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-8">
+    <div class="col-md-8">
         <div class="page-header">
             <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
         </div>
@@ -42,7 +42,7 @@
         <!--</div> -->
     </div>
 
-    <div class="col-xs-4">
+    <div class="col-md-4">
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h3 class="panel-title">مشاوره آماری</h3>
