--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -86,7 +86,7 @@
 
     <div id="footer">
       <div class="container">
-        <p>آماریوم &copy; {{ site.time | date: '%Y' }}
+        <p>amary.ir &copy; {{ site.time | date: '%Y' }}
         </p>
       </div>
     </div>
