--- a/_includes/themes/bootstrap-3/post.html
+++ b/_includes/themes/bootstrap-3/post.html
@@ -49,7 +49,7 @@
             </div>
             <div class="panel-body">
                 <p>در هر مرحله‌ای از پژوهش خود می‌توانید برای بهره‌مندی از مشاوره آماری تخصصی با ما تماس بگیرید.</p>
-                <a href="/contact.html">
+                <a href="/contact/">
                 <button class="btn btn-primary" type="button">درخواست مشاوره آماری</button>
                 </a>
             </div>
