--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -18,11 +18,14 @@
     <!-- Sticky Footer -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bs-sticky-footer.css" rel="stylesheet">
     
-    <!-- Custom styles -->
-    <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+
 	<!-- Custom styles -->
     <link href="{{ ASSET_PATH }}/css/bootstrap-rtl.css?body=1" rel="stylesheet" type="text/css" media="all">
-    <link href="http://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css" rel="stylesheet">	
+    <link href="http://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    
+        <!-- Custom styles -->
+    <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">	
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -76,6 +79,21 @@
 	  
         </div>
 -->
+
+		<div class="collapse navbar-collapse" id="jb-navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li><a href ="../articles/">مطالب آموزشی</a></li>
+				<li><a href ="../about/">درباره</a></li>
+				<li><a href = "../contact/">تماس</a></li>
+			</ul>
+			
+			<ul class="nav navbar-nav tamas">
+				<li><a href="">035-38251057 : <i class="fa fa-phone"></i></a></li>
+				<li><a href="mailto:help@amary.ir">help@amary.ir : <i class="fa fa-envelope-o"></i></a></li>
+			</ul>
+			
+		</div>
+			
       </nav>
 
       <div class="container">
