--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -1,6 +1,9 @@
 /* Custom container */
 
+
 /* Replaced with normal container and standard footer */
+
+
 /*.container-narrow {
   margin: 0 auto;
   max-width: 700px; }
@@ -9,116 +12,177 @@
   margin: 30px 0; }
 */
 
+
 /* Replaced with standard BS3 Navbar */
+
+
 /*.navbar .nav {
   float: right; }*/
 
+
 /* Jekyll Bootstrap Colors */
-h1, h2, h3, h4 {
-  color: #f22430;
-}
-#footer {
-  background-color: #fdcd60;
+
+h1,
+h2,
+h3,
+h4 {
+    color: #f22430;
 }
 
+#footer {
+    background-color: #fdcd60;
+}
 
 
 /* posts index */
+
 .post > h3.title {
-  position: relative;
-  padding-top: 10px; }
+    position: relative;
+    padding-top: 10px;
+}
 
 .post > h3.title span.date {
-  position: absolute;
-  right: 0;
-  font-size: 0.9em; }
+    position: absolute;
+    right: 0;
+    font-size: 0.9em;
+}
 
 .post > .more {
-  margin: 10px 0;
-  text-align: left; }
+    margin: 10px 0;
+    text-align: left;
+}
+
 
 /* post-full*/
+
 .post-full .date {
-  margin-bottom: 20px;
-  font-weight: bold; }
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
 
 /* tag_box */
+
 .tag_box {
-  list-style: none;
-  margin: 0;
-  overflow: hidden; }
+    list-style: none;
+    margin: 0;
+    overflow: hidden;
+}
 
 .tag_box li {
-  line-height: 28px; }
+    line-height: 28px;
+}
 
 .tag_box li i {
-  opacity: 0.9; }
+    opacity: 0.9;
+}
 
 .tag_box.inline li {
-  float: left; }
+    float: left;
+}
 
 .tag_box a {
-  padding: 3px 6px;
-  margin: 2px;
-  background: #eee;
-  color: #555;
-  border-radius: 3px;
-  text-decoration: none;
-  border: 1px dashed #cccccc; }
+    padding: 3px 6px;
+    margin: 2px;
+    background: #eee;
+    color: #555;
+    border-radius: 3px;
+    text-decoration: none;
+    border: 1px dashed #cccccc;
+}
 
 .tag_box a span {
-  vertical-align: super;
-  font-size: 0.8em; }
+    vertical-align: super;
+    font-size: 0.8em;
+}
 
 .tag_box a:hover {
-  background-color: #e5e5e5; }
+    background-color: #e5e5e5;
+}
 
 .tag_box a.active {
-  background: #57A957;
-  border: 1px solid #4c964d;
-  color: #FFF; }
-/* -----------------------------------*/
-body{
-	font-family:"Droid Arabic Naskh" !important;
+    background: #57A957;
+    border: 1px solid #4c964d;
+    color: #FFF;
+}
 
+
+/* -----------------------------------*/
+
+@font-face {
+    font-family: Vazir;
+    src: url('Vazir.eot');
+    src: url('Vazir.eot?#iefix') format('embedded-opentype'), url('Vazir.woff') format('woff'), url('Vazir.ttf') format('truetype');
+    font-weight: normal;
 }
-h1, h2, h3, h4, h5, h6{
-	font-family:"Droid Arabic Naskh" !important;
+
+@font-face {
+    font-family: Vazir;
+    src: url('Vazir-Bold.eot');
+    src: url('Vazir-Bold.eot?#iefix') format('embedded-opentype'), url('Vazir-Bold.woff') format('woff'), url('Vazir-Bold.ttf') format('truetype');
+    font-weight: bold;
 }
-.jumbotron h1{
-	font-size: 36px;
+
+body {
+    font-family: Vazir, sans-serif;
 }
-a{
-	text-decoration: none !important;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Droid Arabic Naskh" !important;
 }
-p{
-	font-size: 16px;
-	line-height: 30px;
+
+.jumbotron h1 {
+    font-size: 36px;
 }
-.page-header h1{
-	font-size: 25px;
+
+a {
+    text-decoration: none !important;
 }
-.navbar-brand{
-	color: #2D3BB2 !important;
+
+p {
+    font-size: 16px;
+    line-height: 30px;
 }
-.jumbotron p{
-	line-height: 30px;
+
+.page-header h1 {
+    font-size: 25px;
 }
-.center{
-	text-align: center;
+
+.navbar-brand {
+    color: #2D3BB2 !important;
 }
-.latin{
-	direction: ltr;
+
+.jumbotron p {
+    line-height: 30px;
 }
-.tamas{
-	float: left;
+
+.center {
+    text-align: center;
 }
-#email, #phone{
-	direction:ltr;
+
+.latin {
+    direction: ltr;
 }
-#footer p{
-	text-align: center;
+
+.tamas {
+    float: left;
 }
-ul, ol{
-	line-height: 30px;
+
+#email,
+#phone {
+    direction: ltr;
+}
+
+#footer p {
+    text-align: center;
+}
+
+ul,
+ol {
+    line-height: 30px;
 }
