remove phone temorary

--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -88,7 +88,7 @@
 			</ul>
 			
 			<ul class="nav navbar-nav tamas">
-				<li><a href="#">035-38251057 : <i class="fa fa-phone"></i></a></li>
+				<!--<li><a href="#">035-38251057 : <i class="fa fa-phone"></i></a></li>-->
 				<li><a href="mailto:help@amary.ir">help@amary.ir : <i class="fa fa-envelope-o"></i></a></li>
 			</ul>
 			
